# aquarium

./: .flake8  .gitignore  Dockerfile  README.md  base.py  build.sh  cataloguer.py  docker-compose.yaml  docker-compose.yml  downloader.py  malware.py  pyproject.toml  requirements.txt  run.sh
src/: base.py  downloader.py  retrieve_sample.py  sample.py  source.py  worker.py
