[tool.poetry]
name = "urlhaus_dl"
version = "0.1.0"
description = ""
authors = ["ranguli <hello@joshmurphy.ca>"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.6.2"
asyncio = "^3.4.3"
requests = "^2.23.0"
sqlalchemy = "^1.3.13"
pathvalidate = "^2.2.0"
"hurry.filesize" = "^0.9"
minio = "^5.0.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
